test for websocket and nginx

--- a/examples/uwsgi.ini
+++ b/examples/uwsgi.ini
@@ -1,13 +1,13 @@
 [default]
 umask = 002
-virtualenv  = /opt/venv
+virtualenv  = /opt/Envs/env_websocket
 master = true
 no-orphans = true
 threads = 1
 env = DJANGO_SETTINGS_MODULE=chatserver.settings
 env = DJANGO_STATIC_ROOT=/var/www/static
 #home = /opt/vir2p
-chdir = /vagrant/django-websocket-redis/examples/
+chdir = /opt/django/examples/
 #logto2 = /tmp/log/uwsgi_django.log
 #vhost = true          //多站模式
 #workers = 2           //子进程数
