--- a/examples/uwsgi_django.ini
+++ b/examples/uwsgi_django.ini
@@ -2,7 +2,7 @@
 #home = /opt/vir2p
 socket = /tmp/django.sock
 pidfile = /tmp/master.pid
-chdir = /vagrant/django-websocket-redis/examples/
+chdir = /opt/django/examples/
 module = wsgi_django:application
 #logto2 = /tmp/log/uwsgi_django.log
 env = DJANGO _SETTINGS_MODULE=chatserver.settings
