--- a/examples/uwsgi_ws.ini
+++ b/examples/uwsgi_ws.ini
@@ -3,7 +3,7 @@
 http-websockets = true
 http-socket = /tmp/ws.sock
 pidfile = /tmp/web.pid
-chdir = /vagrant/django-websocket-redis/examples/
+chdir = /opt/django/examples/
 module = wsgi_websocket:application
 #logto2 = /tmp/log/uwsgi_ws.log
 env = DJANGO _SETTINGS_MODULE=chatserver.settings
